// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderKeyboardInput Snapshots Name 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="slider-keyboard"
      max={100}
      min={0}
      name="slider-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="sc-AxjAm iGTrFZ sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ iWBtgN"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": NaN,
              "value": NaN,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots No props 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots all 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  onBlur={[Function]}
  value={100}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    <label
      className="sc-Axmtr dsOguc sc-fzplWN ldbKvL"
      htmlFor="slider-keyboard"
    >
      Label
      
    </label>
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="slider-keyboard"
      max={1000}
      min={0}
      name="slider-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots label 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    <label
      className="sc-Axmtr dsOguc sc-fzplWN ldbKvL"
      htmlFor="undefined-keyboard"
    >
      Label
      
    </label>
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots max 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={1000}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots min 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onBlur 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  onBlur={[Function]}
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onChange 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots showLabel 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots step 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots value 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={100}
>
  <div
    className="sc-fznyAO gvMetq sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-fznKkj cEcbQA"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      pattern="\\\\d*"
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-AxiKw emHJuz"
  >
    <div
      className="sc-AxhCb jOJTnl"
      style={Object {}}
    >
      <div
        className="sc-AxhUy hyMSCF"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxjAm gTevRY sc-AxgMl cxJYYh"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-AxheI fcSpvz"
      >
        <div
          className="sc-AxirZ cESjww"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
